[project]
name = "nudecrawler"
authors = [
  { name = "Yaroslav Polyakov", email = "yaroslaff@gmail.com" },
]
description = "Crawl telegra.ph searching for nudes!"
readme = "README.md"
license = { text = "MIT License" }
keywords = [
  "crawl",
  "crawler",
  "find",
  "nsfw",
  "nsfw-recognition",
  "nude",
  "nudes",
  "nudity-detection",
  "onlyfans",
  "scrape",
  "scraper",
  "scraping",
  "search",
  "spider",
  "telegra-ph",
  "tits",
  "web-scraping",
  "webscraping"
]

requires-python = ">= 3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Topic :: Games/Entertainment",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Scientific/Engineering :: Image Recognition"
]
dependencies = [
  "beautifulsoup4",
  "evalidate",
  "flask",
  "mudepy",
  "nudenet",
  "numpy",
  "pillow",
  "pytest",
  "python-daemon",
  "python-dotenv",
  "requests",
  "rich",
  "toml",
  "transliterate"
]
dynamic = ["version"]

[project.urls]
"Bug Tracker" = "https://github.com/yaroslaff/nudecrawler/issues"
Changelog = "https://github.com/yaroslaff/nudecrawler/blob/master/CHANGELOG.md"
Homepage = "https://github.com/yaroslaff/nudecrawler"
Repository = "https://github.com/yaroslaff/nudecrawler.git"

[project.scripts]
detect-image-aid = "nudecrawler.scripts.detect_image_aid:main"
detect-image-falconsai = "nudecrawler.scripts.detect_image_falconsai:main"
detect-image-nsfw-api = "nudecrawler.scripts.detect_image_nsfw_api:main"
detect-image-nudenet = "nudecrawler.scripts.detect_image_nudenet:main"
detect-server-falconsai = "nudecrawler.scripts.detect_server_falconsai:main"
detect-server-nudenet = "nudecrawler.scripts.detect_server_nudenet:main"
nudecrawler = "nudecrawler.scripts.nudecrawler:main"
nudecrawler-makeurls = "nudecrawler.scripts.nudecrawler_makeurls:main"

[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "nudecrawler/version.py"
